[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-creative-suite"
version = "0.1.0"
description = "All-in-One KI-gestützte Creative Suite für Programmierung, 3D-Modellierung, Sound & Video"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "herrspiegeljurij-ops"}]
keywords = ["AI", "creative", "3D", "audio", "video", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/herrspiegeljurij-ops/ai-creative-suite"
Repository = "https://github.com/herrspiegeljurij-ops/ai-creative-suite.git"
Issues = "https://github.com/herrspiegeljurij-ops/ai-creative-suite/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
